--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,9 +26,7 @@ body {
 }
 
 a {
-  color: #000000;
   text-decoration: none;
-  background-color: transparent;
   outline: none;
   cursor: pointer;
   transition: color 0.3s;
@@ -44,4 +42,13 @@ select,
 summary,
 textarea {
   touch-action: manipulation;
+}
+
+img {
+  vertical-align: middle;
+  border-style: none;
+}
+
+.main-text-banner {
+  scrollbar-width: none;
 }
